# openclaw-voice-control

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/wakeword/: README.md
config/: default.yaml
docs/: architecture.md  fresh-clone-validation.md  macos-install.md  release-checklist.md  same-machine-test.md
examples/: README.md
launchagents/: README.md  ai.openclaw.overlay.plist  ai.openclaw.voice-control.plist
scripts/: README.md  build_host_apps.sh  deploy_macos.command  deploy_macos.sh  doctor.sh  install_macos.sh  list_audio_devices.py  openclaw_host_launcher.m  restart_service.command  restart_service.sh  start_overlay.sh  start_service.sh  test_microphone.py  uninstall_macos.command  uninstall_macos.sh
skills/openclaw-voice-control/: SKILL.md  SKILL.zh-CN.md
src/openclaw_voice_control/: __init__.py  asr.py  cli.py  config.py  openclaw_client.py  overlay_app.py  service.py  state.py  text.py  tts.py  wakeword.py
tests/: README.md
