[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-voice-control"
version = "0.1.0"
description = "Local macOS voice control companion for OpenClaw."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "funasr>=1.2",
  "numpy>=1.26",
  "PySide6>=6.7",
  "PyYAML>=6.0",
  "pvporcupine>=3.0",
  "pvrecorder>=1.2",
  "requests>=2.31",
  "sounddevice>=0.5",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[project.scripts]
openclaw-voice-control = "openclaw_voice_control.cli:main"
openclaw-overlay = "openclaw_voice_control.overlay_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
